@@ -28,6 +28,11 @@ Changes with Apache 2.3.6
      processing is completed, avoiding orphaned callback pointers.
      [Brett Gervasoni <brettg senseofsecurity.com>, Jeff Trawick]
 
+  *) mod_disk_cache: Decline the opportunity to cache if the response is
+     a 206 Partial Content. This stops a reverse proxied partial response
+     from becoming cached, and then being served in subsequent responses.
+     [Graham Leggett]
+
   *) mod_deflate: avoid the risk of forwarding data before headers are set.
      PR 49369 [Matthew Steele <mdsteele google.com>]
 
